13-sidecar-proxy-cloudsql/email-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: email-service
  name: email-service
  namespace: default
spec:
  replicas: 1 #CHANGE
  minReadySeconds: 30
  selector:
    matchLabels:
      app: email-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: email-service
    spec:
#      imagePullSecrets:
#        - name: regcred
      containers:
        - image: PATH TO IMAGE REGISTRY #CHANGE
          imagePullPolicy: Always #IfNotPresent
          name: email-service
          ports:
            - name: liveness-port
              containerPort: 8001
          readinessProbe:
            httpGet:
              path: /
              port: 8001
            failureThreshold: 5
            periodSeconds: 10
            initialDelaySeconds: 60
          livenessProbe:
            httpGet:
              path: /
              port: 8001
            failureThreshold: 5
            periodSeconds: 10
            initialDelaySeconds: 60
      restartPolicy: Always
#      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels: #PODS
    app: email-service
  name: email-service
  namespace: default
spec:
  ports:
    - port: 8001 #CHANGE
      protocol: TCP
      targetPort: 8001 #CHANGE
  selector:
    app: email-service
