13-sidecar-proxy-cloudsql/rabbit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rabbitmq
  name: rabbitmq
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: rabbitmq
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: rabbitmq
    spec:
      containers:
      - image: rabbitmq:3-management
        imagePullPolicy: IfNotPresent
        name: rabbitmq
        ports:
        - containerPort: 4369
          protocol: TCP
        - containerPort: 5671
          protocol: TCP
        - containerPort: 5672
          protocol: TCP
        - containerPort: 25672
          protocol: TCP
        - containerPort: 15672
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rabbitmq
  name: rabbitmq
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: "4369"
    nodePort: 30452
    port: 4369
    protocol: TCP
    targetPort: 4369
  - name: "5671"
    nodePort: 32147
    port: 5671
    protocol: TCP
    targetPort: 5671
  - name: "5672"
    nodePort: 31866
    port: 5672
    protocol: TCP
    targetPort: 5672
  - name: "25672"
    nodePort: 32487
    port: 25672
    protocol: TCP
    targetPort: 25672
  - name: "15672"
    nodePort: 32585
    port: 15672
    protocol: TCP
    targetPort: 15672
  selector:
    app: rabbitmq
  sessionAffinity: None
  type: NodePort
